2005-06-08  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile: Make sure derived files don't end up in the tarball.

	* Makefile:
	* NEWS: Add latest news.

2005-06-04  Stephen Deasey  <sdeasey@users.sf.net>

	* configure:
	* configure.in:
	* include/Makefile.global.in:
	* Makefile: Add 'dist' Makefile target.  Rebuild configure.

	* configure:
	* configure.in:
	* include/config.h.in:
	* include/ns.h: Move definition of version information from main
	header into configure script.  Rebuild configure.

	* Makefile: Also remove include/config.h on distclean.

	* configure:
	* configure.in:
	* include/nsthread.h:
	* include/Makefile.global.in:
	* include/config.h.in: Update configure.in to use an autoheader
	generated config.h.in.  Rebuild configure.

	* configure:
	* tcl.m4: Update to revision 1.64 of tcl.m4 from Tcl cvs which
	adds AC_DEFINE descriptions for use with autoheader.  Rebuild
	configure.

2005-05-21  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/driver.c: fixed coredump in NsStartDrivers() if the driver
	does not have the bindaddr defined (i.e. it is NULL).

2005-05-20  Vlad Seryakov  <seryakov@users.sf.net>

	* ns/include.h:
	* nsd/driver.c: added support for UDP and Unix domain sockets
	for HTTP over udp/unix sockets. Removed obsolete driver functions.

2005-05-16  Stephen Deasey  <sdeasey@users.sf.net>

	* aclocal.m4:
	* tcl.m4
	* configure.in:
	* configure:
	* include/Makefile.global.in:
	* include/Makefile.module.in: Include tc.m4 macros and convert to
	Tcl TEA build system.  Add messages to all autoconf feature
	tests.  Remove unneeded feature tests.  Rebuild configure script using
	autoconf 2.59.

2005-05-15  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/info.c:
	* nsd/nsmain.c:
	* nscp/nscp.c: Remove redundant Ns_InfoLabel(). Use Ns_InfoTag() instead.

	* include/ns.h: Bump version to 4.99.0 alpha.

	* include/ns.h:
	* nscp/nscp.c:
	* nsd/adpeval.c:
	* nsd/conn.c:
	* nsd/driver.c:
	* nsd/info.c: