@@ -141,6 +141,7 @@ extern Tcl_ObjCmdProc
     NsTclReturnNotFoundObjCmd,
     NsTclReturnNoticeObjCmd,
     NsTclReturnObjCmd,
+    NsTclReturnBinaryObjCmd,
     NsTclReturnRedirectObjCmd,
     NsTclReturnUnauthorizedObjCmd,
     NsTclRmdirObjCmd,
@@ -479,6 +480,7 @@ static Cmd servCmds[] = {
     {"ns_returnforbidden", NULL, NsTclReturnForbiddenObjCmd},
     {"ns_returnunauthorized", NULL, NsTclReturnUnauthorizedObjCmd},
     {"ns_returnnotfound", NULL, NsTclReturnNotFoundObjCmd},
+    {"ns_returnbinary", NULL, NsTclReturnBinaryObjCmd},
 
     /*
      * tclfile.c
